// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for a multiple expenses 1`] = `
<div>
  Viewing 
  2
   
  expenses
   totalling 
  $0.40
</div>
`;

exports[`should render correctly for a single expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $0.30
</div>
`;
